@@ -1,6 +1,7 @@
 Release Notes
 
 * current
+  * added soft flag to reassignTask
   * removed old hint for 10.2.0.4
   * added job cloning stuff
   * added max/avgRSS etc
